--- a/API/composer.json
+++ b/API/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+        "setasign/fpdi-fpdf": "^2.3"
+       
     }
+   
 }
